<resources>
    <!-- App Name   -->
    <string name="app_name">Floation</string>

    <!-- Landing Page String   -->
    <string name="uploadModul">Upload Your Modules</string>
    <string name="uploadModul1">Make it Easy to Upload Modules</string>
    <string name="absenAsdos">Fill Attendance</string>
    <string name="absenAsdos1">Make it Easy to Complete Your Attendance List</string>
    <string name="continueLanding">Continue</string>
    <string name="skipLanding">Skip</string>

    <string name="attedance"></string>

    <!-- Login Page  -->
    <string name="userName">Username</string>
    <string name="passWord">Password</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>