<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/login"
            android:contentDescription="@string/login"/>

        <ImageView
            android:id="@+id/logoFloation"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:src="@drawable/floation"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/floationApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/baseColor"
            android:textSize="32sp"/>

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/userName"
            android:paddingStart="20dp"
            android:ems="10"
            android:background="@color/txtEdit"
            android:autofillHints="Username"
            android:inputType="text|textPersonName"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/txtNPM"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/passWord"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:ems="10"
            android:background="@color/txtEdit"
            android:autofillHints="Password"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_background_button"
            android:layout_marginTop="60dp"
            android:text="@string/login"
            android:fontFamily="@font/montserrat_bold"/>

        <Button
            android:id="@+id/buttonGuest"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:text="@string/guest"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"/>
    </LinearLayout>
</ScrollView>