<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landingpage.LandingPageAttendance">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/absen"
            android:contentDescription="@string/absenAsdos"/>

        <TextView
            android:id="@+id/easyPresent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/absenAsdos"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/baseColor"
            android:textSize="32sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/easyPresent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/absenAsdos1"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="175dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/loadBar"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/custom_load"
                android:contentDescription="@string/absenAsdos1"/>

            <ImageView
                android:id="@+id/loadBar1"
                android:layout_width="25dp"
                android:layout_height="9dp"
                android:src="@drawable/custom_background_button"
                android:contentDescription="@string/absenAsdos1" />
        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/continueLanding"
            android:fontFamily="@font/montserrat_bold"
            android:background="@drawable/custom_background_button"/>

        <Button
            android:id="@+id/buttonSkip"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/skipLanding"
            android:layout_gravity="center"
            android:background="@android:color/transparent"/>

    </LinearLayout>
</ScrollView>