<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landingpage.LandingPageUpload">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/upload"
        android:layout_width="505dp"
        android:layout_height="315dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="398dp"
        android:contentDescription="@string/uploadModul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="357dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/uploadModul"
        android:textColor="@color/baseColor"
        android:textSize="32sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:text="@string/uploadModul1"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="155dp"
        android:background="@drawable/custom_background_button"
        android:text="@string/continueLanding"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="9dp"
        android:layout_marginStart="193dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/custom_background_button" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="10dp"
        android:layout_height="8.95dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="193dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/custom_load" />

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="46dp"
        android:text="@string/skipLanding"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContinue" />

</androidx.constraintlayout.widget.ConstraintLayout>